Fix bio tagline classname.

--- a/styles/components/bio-tagline.css
+++ b/styles/components/bio-tagline.css
@@ -1,5 +1,5 @@
 @layer components {
-  .bio-subtitle {
+  .bio-tagline {
     @apply inline-flex flex-col;
     text-shadow: none;
     counter-reset: list-number;
